smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/defaults/members-can-be-default-and-required.smithy
$version: "2.0"

namespace smithy.example

structure Foo {
    @required
    bar: Integer = 0
}
